<resources>
    <string name="app_name">construction</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_cancelled">Cancelled</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_construction_home">construction Home</string>
    <string name="lbl_data">Data</string>
    <string name="lbl_today">Today is</string>
    <string name="lbl_search_task">Search task&#8230;</string>
    <string name="lbl_project">Projects</string>
    <string name="lbl_reasons">Reasons</string>
    <string name="sp_file_name">sp_construction</string>
    <string name="sp_user_id">user_id</string>
    <string name="sp_user_name">user_name</string>
    <string name="sp_password">sp_password</string>
    <string name="sp_user_image">user_image</string>
    <string name="sp_user_token">user_token</string>
    <string name="sp_start_date">start_date</string>
    <string name="sp_end_date">end_date</string>
    <string name="sp_user_status">user_status</string>
    <string name="sp_project_id">project_id</string>
    <string name="sp_is_login">is_login</string>
    <string name="sp_user_email">user_email</string>
    <string name="sp_login_with_social">login_with_social</string>
    <string name="sp_last_time">last_active_time</string>
    <string name="sp_server_name">server_name</string>
    <string name="sp_server_name_file">sp_server</string>
    <string name="sp_is_notification">is_notification</string>
    <string name="sp_is_notification_everyone">sp_is_notification_everyone</string>
       <string name="sp_is_not_notification">sp_is_not_notification</string>
    <string name="sp_is_file_notification">sp_is_file_notification</string>
    <string name="sp_is_status_notification">sp_is_status_notification</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh&#8230;</string>
    <string name="pull_to_refresh_release_label">Release to refresh&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">Loading&#8230;</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh&#8230;</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_projects">Select Projects</string>
    <string name="lbl_select">Select</string>
    <string name="hint_type_here">Type here..</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_setting">Settings</string>
    <string name="lbl_back">Back</string>
    <string name="msg_exit">Are you sure you want to exit?</string>
    <string name="msg_logout">Are you sure you want to logout?</string>
    <string name="lbl_task_in_progress">Tasks in Progress</string>
    <string name="lbl_make_ready_task">Make Ready Tasks</string>
    <string name="lbl_reassignments">Reassignments</string>
    <string name="lbl_notification">Notifications</string>
    <string name="lbl_snagging">Snagging</string>
    <string name="lbl_report">Reports</string>
    <string name="lbl_task_card">Task Card(Exec)</string>
    <string name="lbl_activeted">Active</string>
    <string name="lbl_dactive">Deactive</string>
    <string name="lbl_role">Role</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_organisation">Organization</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_user_status">User Status</string>
    <string name="lbl_active">Active</string>
    <string name="lbl_in_active">In-Active</string>
    <string name="lbl_update_profile">Update Profile</string>
    <string name="hint_fname">First name</string>
    <string name="hint_lname">Family name</string>
    <string name="not_define">Not defined</string>
    <string name="lbl_synchronse_automatically">Synchronise Automatically</string>
    <string name="lbl_frequency">Frequency</string>
    <string name="lbl_every_hour">Every Hour</string>
    <string name="lbl_1_hour">1 Hour</string>
    <string name="lbl_load_data_for_duration">Load Data for Duration</string>
    <string name="lbl_1week">1 Week</string>
    <string name="lbl_data_storage_limit">Data Storage Limit</string>
    <string name="lbl_data_storage_limit_mb">100 MB</string>
    <string name="lbl_load_data_duration">Set load data duration</string>
    <string name="lbl_allow_notification">Allow Notifications</string>
    <string name="lbl_message_option">Message Options</string>
    <string name="lbl_show_alert_from_everyone">Show Alerts From Everyone</string>
    <string name="lbl_show_alert_from">Show Alerts From</string>
    <string name="lbl_only_me">Only Me</string>
    <string name="lbl_only_member">Only Member</string>
    <string name="lbl_public">Public</string>
    <string name="lbl_include_alerts_for">Include Alerts For</string>
    <string name="lbl_active_status_change">Activity Status Change</string>
    <string name="lbl_active_data_change">Activity Date Change</string>
    <string name="lbl_active_note_update">Activity Note Updates</string>
    <string name="lbl_when_i_am_referred">When I am Referred</string>
    <string name="lbl_set_alert_privacy">Set Alert Privacy</string>
    <string name="lbl_more">More</string>
    <string name="lbl_material">Material</string>
    <string name="lbl_equipment">Equipment</string>
    <string name="lbl_workers">Workers</string>
    <string name="lbl_space">Space</string>
    <string name="lbl_design">Design</string>
    <string name="lbl_override">Override</string>
    <string name="lbl_make_ready_by">Make Ready By : </string>
    <string name="lbl_all">All</string>
    <string name="lbl_unread">Unread</string>
    <string name="lbl_archived">Archived</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_predescessors">Predecessors</string>
    <string name="lbl_files">Files</string>
    <string name="lbl_notes">Notes</string>
    <string name="lbl_history">History</string>
    <string name="lbl_Comment">Comments</string>
    <string name="hint_Comment">Write comments&#8230;</string>
    <string name="lbl_due">Due </string>
    <string name="lbl_start">Start</string>
    <string name="lbl_stop">Stop</string>
    <string name="lbl_alert">Alert</string>
    <string name="lbl_complete">Complete</string>
    <string name="lbl_select_actore">Select Approver</string>
    <string name="lbl_type_note_and_take_photo">You can type note and take photo</string>
    <string name="lbl_your_report">Your reports</string>
    <string name="lbl_last_month">Last Month</string>
    <string name="lbl_six_month">Six Month</string>
    <string name="lbl_custom">Custom</string>
    <string name="lbl_percentage_plan_complete">Percentage plan complete</string>
    <string name="lbl_report_pie_chart">Reports-Pie-Chart</string>
    <string name="lbl_report_line_chart">Reports-Line-Chart</string>
    <string name="lbl_reason_for_non_completion">Reason for non-completion</string>
    <string name="lbl_reason_for_delay">Reason for delays/stoppages</string>
    <string name="lbl_list_of_delayed_tasks">List of delayed tasks</string>
    <string name="lbl_stoped_tasks">Stopped tasks</string>
    <string name="lbl_external_condition">External </string>
    <string name="lbl_laber">Manpower</string>
    <string name="lbl_week1">Week 1</string>
    <string name="lbl_week2">Week 2</string>
    <string name="lbl_week3">Week 3</string>
    <string name="lbl_week4">Week 4</string>
    <string name="lbl_week5">Week 5</string>
    <string name="lbl_markeed_complete">Marked Complete On :</string>
    <string name="lbl_mark_for_rework">Mark for Rework</string>
    <string name="lbl_incomplete">Incomplete</string>
    <string name="lbl_defective">Defective</string>
    <string name="lbl_need_further_insepection">Need Further Inspection</string>
    <string name="validation_no_internet">Internet not available, Please check your internet connection</string>
    <string name="dialog_loading">Loading&#8230;</string>
    <string name="validation_failed">There is some problem in system at the moment so please try after some time, We appreciate your patience.</string>
    <string name="validation_token_expired">Your Token is expired, so login again..</string>
    <string name="validation_error">Error</string>
    <string name="validation_enter_username_emal">Please enter user name or email.</string>
    <string name="validation_enter_some_text">Please enter some text</string>
    <string name="validation_enter_username">Please enter user name</string>
    <string name="validation_enter_display_name">Please enter user display name</string>
    <string name="validation_enter_password">Please enter password</string>
    <string name="validation_email">Please enter your email id.</string>
    <string name="validation_email_valid">Please enter valid email id.</string>
    <string name="validation_fname">Please enter first name.</string>
    <string name="validation_lname">Please enter last name.</string>
    <string name="validation_dob">Please select date of birth.</string>
    <string name="validation_gender">Please select gender</string>
    <string name="validation_country">Please select country</string>
    <string name="validation_city">Please select city</string>
    <string name="validation_aboutme">Please enter a few descriptions about you..</string>
    <string name="validation_old_password">Please enter old password</string>
    <string name="validation_new_password">Please enter new password</string>
    <string name="validation_re_enter_password">Please re-enter new password</string>
    <string name="validation_confirm_password">Confirm password not match</string>
    <string name="validation_enter_new_username">Please enter new user name</string>
    <string name="validation_title">Please enter title</string>
    <string name="validation_forum_description">Please enter a description about your post..</string>
    <string name="validation_no_token">You don\'t have enough balance to play quiz, please buy balance.</string>
    <string name="validation_enter_subject">Please enter subject</string>
    <string name="validation_enter_comments">Please write a comment</string>
    <string name="validation_select_reasons">Please select reasons</string>
    <string name="validation_discription_not_foune">No Description</string>
    <string name="validation_to_date">Do not find future history.</string>
    <string name="validation_select_to_date">Please select to date.</string>
    <string name="validation_select_from_date">Please select from date.</string>
    <string name="alt_msg_invalid_username_password">Invalid user name and password.</string>
    <string name="alt_msg_log_out">Are you sure you want to log out?</string>
    <string name="alt_msg_select_project">Please select project.</string>
    <string name="alt_msg_data_not_founds">Data not found</string>
    <string name="alt_msg_set_staus_successfull">Set Status Successfully</string>
    <string name="alt_msg_send_picture">Send Picture</string>
    <string name="alt_msg_Profile_pic">Profile Picture</string>
    <string name="alt_msg_send_picture_msessage">How do you want to send your picture?</string>
    <string name="alt_msg_set_profile_picture">How do you want to set your picture?</string>
    <string name="alt_msg_notes_not_found">Notes not found</string>
    <string name="alt_download_file">Are you sure you want to download this file ?</string>
    <string name="lbl_fromdate">Select From Date</string>
    <string name="lbl_todate">Select To Date</string>
</resources>