<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_translucent"
    android:padding="@dimen/dimen_10" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50"
        android:background="@drawable/bg_white_rounded_with_border"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_20"
        android:paddingLeft="@dimen/dimen_10"
        android:paddingRight="@dimen/dimen_10"
        android:paddingTop="@dimen/dimen_20" >

        <TextView
            style="@style/textview_sub_title_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/dimen_150"
            android:text="@string/lbl_update_profile" />

        <EditText
            android:id="@+id/dialog_username_update_editText_fname"
            style="@style/edittext_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/hint_fname"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/login_text_color" />

        <EditText
            android:id="@+id/dialog_username_update_editText_lname"
            style="@style/edittext_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/hint_lname"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/login_text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dialog_username_updatee_textview_cancel"
                style="@style/button_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_weight="1"
                android:gravity="center"
                android:minWidth="@dimen/dimen_150"
                android:text="@string/lbl_cancel" />

            <TextView
                android:id="@+id/dialog_username_updatee_textview_send"
                style="@style/button_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginLeft="@dimen/dimen_5"
                android:layout_weight="1"
                android:gravity="center"
                android:minWidth="@dimen/dimen_150"
                android:text="@string/lbl_update" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>