<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0_5"
            android:background="@color/bg_bottom_tab_bar" />

        <TextView
            android:id="@+id/fragment_settings_textveiw_notifications_allow_notification"
            style="@style/textview_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/btn_on"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_10"
            android:text="@string/lbl_allow_notification"
            android:textColor="@color/bg_bottom_tab_bar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0_5"
            android:background="@color/bg_bottom_tab_bar" />

        <TextView
            style="@style/textview_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:paddingBottom="@dimen/dimen_5"
            android:paddingLeft="@dimen/dimen_10"
            android:paddingRight="@dimen/dimen_5"
            android:paddingTop="@dimen/dimen_5"
            android:text="@string/lbl_message_option"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0_5"
            android:background="@color/bg_bottom_tab_bar" />

        <TextView
            android:id="@+id/fragment_settings_notifications_show_alert_from_everyone"
            style="@style/textview_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/check_box_on"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_10"
            android:text="@string/lbl_show_alert_from_everyone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0_5"
            android:background="@color/bg_bottom_tab_bar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/fragment_settings_notifications_textview_show_alert"
                style="@style/textview_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawableRight="@drawable/detail_arrow"
                android:gravity="center_vertical"
                android:padding="@dimen/dimen_10"
                android:text="@string/lbl_only_me" />

            <TextView
                android:id="@+id/fragment_settings_notifications_textview_show_alert_value"
                style="@style/textview_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/fragment_settings_notifications_textview_show_alert"
                android:layout_alignBottom="@+id/fragment_settings_notifications_textview_show_alert"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/fragment_settings_notifications_textview_show_alert"
                android:padding="@dimen/dimen_10"
                android:text="@string/lbl_show_alert_from" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0_5"
            android:background="@color/bg_bottom_tab_bar" />

        <TextView
            style="@style/textview_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:paddingBottom="@dimen/dimen_5"
            android:paddingLeft="@dimen/dimen_10"
            android:paddingRight="@dimen/dimen_5"
            android:paddingTop="@dimen/dimen_5"
            android:text="@string/lbl_include_alerts_for"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0_5"
            android:background="@color/bg_bottom_tab_bar" />

        <TextView
            android:id="@+id/fragment_settings_notifications_textview_active_status_change"
            style="@style/textview_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/btn_on"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_10"
            android:text="@string/lbl_active_status_change" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0_5"
            android:background="@color/bg_bottom_tab_bar" />

        <TextView
            android:id="@+id/fragment_settings_notifications_textview_active_data_change"
            style="@style/textview_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/btn_on"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_10"
            android:text="@string/lbl_active_data_change" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0_5"
            android:background="@color/bg_bottom_tab_bar" />

        <TextView
            android:id="@+id/fragment_settings_notifications_textview_active_note_update"
            style="@style/textview_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/btn_on"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_10"
            android:text="@string/lbl_active_note_update" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0_5"
             android:visibility="gone"
            android:background="@color/bg_bottom_tab_bar" />

        <TextView
            android:id="@+id/fragment_settings_notifications_textview_when_i_am_reffered"
            style="@style/textview_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/btn_on"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_10"
            android:visibility="gone"
            android:text="@string/lbl_when_i_am_referred" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0_5"
            android:background="@color/bg_bottom_tab_bar" />
    </LinearLayout>

</ScrollView>