<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_translucent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dimen_5" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dimen_2" >

        <TextView
            android:id="@+id/view_select_from_to_date_textview_from"
            style="@style/textview_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_bottom_tab_bar"
            android:gravity="center"
            android:padding="@dimen/dimen_5"
            android:text="@string/lbl_fromdate"
            android:textColor="@color/white" />

        <DatePicker
            android:id="@+id/view_select_from_to_date_datepicker_from"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:calendarViewShown="false" />

        <TextView
            android:id="@+id/view_select_from_to_date_textview_to"
            style="@style/textview_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_bottom_tab_bar"
            android:gravity="center"
            android:padding="@dimen/dimen_5"
            android:text="@string/lbl_todate"
            android:textColor="@color/white" />

        <DatePicker
            android:id="@+id/view_select_from_to_date_datepicker_to"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:calendarViewShown="false" />

        <LinearLayout
            android:id="@+id/view_select_from_to_date_linear_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible" >

            <TextView
                android:id="@+id/view_select_from_to_date_textview_done"
                style="@style/button_normal_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dimen_5"
                android:text="@string/lbl_ok"
                android:textSize="@dimen/text_normal_app" />

            <View
                android:id="@+id/fragment_khatawahi_view_divider"
                android:layout_width="1dp"
                android:layout_height="35dp"
                android:background="@color/bg_action_bar" />

            <TextView
                android:id="@+id/view_select_from_to_date_textview_cancel"
                style="@style/button_normal_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dimen_5"
                android:text="@string/lbl_cancel"
                android:textSize="@dimen/text_normal_app" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>